<resources>
    <string name="app_name">EQS1707289</string>
    <string name="google_maps_key">AIzaSyCb3jKpIvozNO5ZJuyPbX_tj8i8OgmuqjA</string>
    <string name="date">Date</string>
    <string name="Null">null</string>
    <string name="exitButton">Exit</string>
    <string name="location">Location</string>
    <string name="magnitude">Magnitude:</string>
    <string name="depth">Depth:</string>
    <string name="originDate">Date:</string>
    <string name="originTime">Time:</string>
    <string name="category">Category:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="link">Link:</string>
    
    <string-array name="filter_array">
        <item>Show All</item>
        <item>Largest Magnitude</item>
        <item>Deepest Earthquake</item>
        <item>Most Northerly</item>
        <item>Most Easterly</item>
        <item>Most Southerly</item>
        <item>Most Westerly</item>
    </string-array>
</resources>