<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        >

        <RelativeLayout
            android:id="@+id/navBar2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:background="@color/grey">

            <TextView
                android:id="@+id/locationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:focusable="false"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="Exit"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:paddingTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/magnitudeLabel2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/magnitude"/>
                <TextView
                    android:id="@+id/magnitudeTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/depthLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/depth"/>
                <TextView
                    android:id="@+id/depthTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/categoryLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/category"/>
                <TextView
                    android:id="@+id/categoryTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/latitudeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/latitude"/>
                <TextView
                    android:id="@+id/latitudeTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/longitudeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/longitude"/>
                <TextView
                    android:id="@+id/longitudeTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/originDateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/originDate"/>
                <TextView
                    android:id="@+id/originDateTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="50"
                    android:text="@string/Null"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:paddingHorizontal="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/linkLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="20"
                    android:text="@string/link"/>
                <TextView
                    android:id="@+id/linkTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="80"
                    android:text="@string/Null"
                    android:autoLink="web"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>